# Terminaux

./: .gitignore  README.md  package-lock.json  package.json  tsconfig.json
src/: App.tsx  styles.css  xterm.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: lib.rs  main.rs  mod.rs  terminal.rs
src-tauri/src/pty/: mod.rs  pty.rs
src-tauri/src/shell/: shell.rs
src-tauri/src/utils/: app_state.rs
src/components/: TerminalScreen.tsx  TerminalTab.tsx
src/data/: Kanagawa-Dragon.json
