[package]
name = "Term-Solidjs"
version = "0.0.0"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.2.1", features = [] }

[dependencies]
tauri = { version = "1.2.4", features = [ "api-all",
    "linux-protocol-headers",
] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
portable-pty = "0.8.1"
infer = "0.13.0"
notify = "5.1.0"
tokio = { version = "1.26.0", features = ["time"] }
dirs-next = "2.0.0"
uuid = "1.3.0"
shells = "0.2.0"
webkit2gtk = "0.18.2"
[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
